2019-10-04  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-attributes.Rmd: Correct two unevaluated knitr C++
	chunks to mode 'Rcpp' rather than the (unregistered) C++ mode
	* vignettes/Rcpp-extending.Rmd: Minor white-space tweak to avoid
	paragraph-spacing warnings from latex and its mdframed style
	* vignettes/Rcpp-modules.Rmd: Idem
	* vignettes/Rcpp-sugar.Rmd: Idem

2019-10-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	
2019-09-30  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp.h: add RCPP_NO_MODULES
	* inst/include/Rcpp/api/meat/is.h: Idem
	* inst/include/Rcpp/api/meat/meat.h: Idem

2019-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a stackoverflow tag to indicate where to ask questions,
	also updated package counts on CRAN and BioC for Rcpp users

2019-08-06  Riccardo Porreca  <riccardo.porreca@mirai-solutions.com>

	* vignettes/Rcpp-modules.Rmd: Extensive review and edit improving the
	Modules vignette

2019-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add thre doi badges

	* inst/NEWS.Rd: Two minor edits

2019-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-07-21  Riccardo Porreca  <riccardo.porreca@mirai-solutions.com>

	* R/Module.R: Use an explicit Rcpp:: in the initalize method for C++
	classes wrapped inside modules to ensure proper initialization

2019-07-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 1.0.2

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * inst/bib/Rcpp.bib: Idem
        * vignettes/Rcpp.bib: Idem

2019-07-18  Pierrick Roger  <pk.roger@icloud.com>

	* src/attributes.cpp: Correct parsing of default function values
	* inst/unitTests/cpp/attributes.cpp: Added tests
	* inst/unitTests/runit.attributes.R: Idem

2019-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* debian/: Removed, see https://salsa.debian.org/edd/r-base/ instead
